--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -7,6 +7,9 @@
     --wrong: #d32f2f;
     --input-bg: #ffffff;
 }
+.blurry_hint2{
+    filter: blur(5px)
+}
 
 body.accessible {
     --correct: #2e7d32;
