--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -116,12 +116,27 @@ h1 {
 }
 
 .progress-bar-wrapper {
+    position: relative;
     background-color: #444;
     width: 100%;
     height: 10px;
     border-radius: 5px;
     overflow: hidden;
 }
+
+.progress-marker {
+    position: absolute;
+    top: 0;
+    width: 2px;
+    height: 100%;
+    background: #fff;
+    opacity: 0.7;
+    z-index: 2;
+}
+
+.marker-3 { left: 33.33%; }
+.marker-6 { left: 66.66%; }
+.marker-9 { left: 100%; }
 
 .progress-bar-fill {
     background-color: var(--wrong);
